--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "env-cmd -f .env.development gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -15,10 +15,15 @@
   },
   "dependencies": {
     "gatsby": "^2.20.35",
+    "gatsby-plugin-sass": "^2.2.4",
+    "gatsby-source-wordpress": "^3.2.6",
+    "node-sass": "^4.14.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "axios": "^0.19.2",
+    "env-cmd": "^10.1.0",
     "prettier": "2.0.4"
   },
   "repository": {
