--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-netlify-cms": "^4.3.11",
     "gatsby-plugin-sass": "^2.2.4",
     "gatsby-source-wordpress": "^3.2.6",
+    "gatsby-transformer-remark": "^2.8.28",
     "graphql-tag": "^2.10.3",
     "netlify-cms-app": "^2.12.19",
     "node-sass": "^4.14.0",
