--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,3 +15,4 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "description", widget: "string" }
       - { label: "Featured Image", name: "thumbnail", widget: "image" }
+      - { label: "Content", name: "body", widget: "markdown" }
